# facebook-rss

./: .travis.yml  FacebookRSS.hs  LICENSE  Main.hs  Makefile  README.md  cabal.config  facebook-rss.cabal
Data/Facebook/: Feed.hs  Post.hs
FacebookRSS/: Facebook.hs  RSS.hs
Text/: AutoLinks.hs
feeds/: bloggerYangSzuPang  eoiss.blog  freemarketfreepeople  sophist4ever
tests/: AutoLinks.hs  DataTest.hs  FacebookTest.hs  Main.hs  TestMain.hs  TestUtils.hs
