name:                facebook-rss
version:             0.1.1.0
homepage:            http://github.com/poying/facebook-rss
license:             MIT
license-file:        LICENSE
author:              Po-Ying Chen
maintainer:          poying.me@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable facebook-rss
  main-is: Main.hs
  build-depends:
    base >=4.8 && <4.9,
    rss >=3000.2 && <3000.3,
    HTTP >=4000.2 && <4000.3,
    optparse-applicative >=0.12 && <0.13,
    time ==1.5.0.1,
    split,
    aeson,
    network-uri ==2.6.0.3,
    http-client,
    http-client-tls,
    bytestring,
    regex-compat-tdfa
  default-language: Haskell2010

test-suite test
  main-is: TestMain.hs
  hs-source-dirs:
    .,
    tests
  build-depends:
    base >=4.8 && <4.9,
    rss >=3000.2 && <3000.3,
    HTTP >=4000.2 && <4000.3,
    optparse-applicative >=0.12 && <0.13,
    HUnit >=1.3 && <1.4,
    test-framework >=0.8 && <0.9,
    test-framework-hunit >=0.3 && <0.4,
    time ==1.5.0.1,
    split,
    aeson,
    network-uri ==2.6.0.3,
    http-client,
    http-client-tls,
    bytestring,
    regex-compat-tdfa
  type: exitcode-stdio-1.0
  default-language: Haskell2010
